# tinyoal

./: .gitattributes  .gitignore  .gitmodules  00testbed.mk  01wavfile.mk  02oggfile.mk  03properties.mk  04mp3file.mk  05flacfile.mk  CHANGELOG.md  CMakeLists.txt  LICENSE-BSS-UTIL.md  LICENSE-KHASH.md  README.md  TinyOAL.sln  base.mk  makefile  pack.bat  readme.txt  tinyoal.mk  vcpkg-configuration.json  vcpkg.json
TinyOAL/: Audio.cpp  AudioResource.cpp  AudioResourceFLAC.cpp  AudioResourceFLAC.h  AudioResourceMP3.cpp  AudioResourceMP3.h  AudioResourceOGG.cpp  AudioResourceOGG.h  AudioResourceWAV.cpp  AudioResourceWAV.h  CMakeLists.txt  CWaves.cpp  Engine.h  FlacFunctions.cpp  FlacFunctions.h  LoadOAL.cpp  Mp3Functions.cpp  Mp3Functions.h  OALEngine.cpp  OALEngine.h  OggFunctions.cpp  OggFunctions.h  TinyOAL.cpp  TinyOAL.rc  TinyOAL.vcproj  TinyOAL.vcxproj  TinyOAL.vcxproj.filters  TinyOALdef.h  WASEngine.cpp  WASEngine.h  WaveFunctions.cpp  WaveFunctions.h  aldlist.cpp  cAudio.cpp  cAudioResource.cpp  cAudioResourceFLAC.cpp  cAudioResourceFLAC.h  cAudioResourceMP3.cpp  cAudioResourceMP3.h  cAudioResourceOGG.cpp  (+16 more)
TinyOAL/mpg123/: mpg123.h
TinyOAL/openAL/: CWaves.h  aldlist.h  codec.h  loadoal.h  ogg.h  os_types.h  vorbisfile.h
TinyOAL_Net/: TOCHAR.h  TinyOAL_Net.vcproj  TinyOAL_Net.vcxproj  TinyOAL_Net.vcxproj.filters  clr_Audio.cpp  clr_Audio.h  clr_AudioResource.cpp  clr_AudioResource.h  clr_TinyOAL.cpp  clr_TinyOAL.h
doc/: OpenAL-LICENSE.txt  TinyOAL-LICENSE.txt  changelog.txt
examples/00Testbed/: 00Testbed.vcproj  00Testbed.vcxproj  CMakeLists.txt  example.cpp
examples/01 WavFile/: 01 WavFile.vcproj  01 WavFile.vcxproj  example.cpp
examples/01WavFile/: 01WavFile.vcproj  01WavFile.vcxproj  CMakeLists.txt  example.cpp
examples/02 OggFile/: 02 OggFile.vcproj  02 OggFile.vcxproj.filters  example.cpp
examples/02OggFile/: 02OggFile.vcproj  02OggFile.vcxproj  CMakeLists.txt  example.cpp
examples/03 Volume Panning and Pitch/: 03 Volume Panning and Pitch.vcproj  03 Volume Panning and Pitch.vcxproj  example.cpp
examples/03PropTest/: 03Properties.vcxproj  03Properties.vcxproj.filters  CMakeLists.txt  example.cpp
examples/03Properties/: 03Properties.vcproj  03Properties.vcxproj  example.cpp
examples/04 Mp3File/: 04 Mp3File.vcproj  04 Mp3File.vcxproj  example.cpp
examples/04Mp3File/: 04Mp3File.vcproj  04Mp3File.vcxproj  CMakeLists.txt  example.cpp
examples/05FlacFile/: 05FlacFile.vcproj  05FlacFile.vcxproj  CMakeLists.txt  example.cpp
examples/05Managed/: 05Managed.csproj  Program.cs
examples/05Managed/Properties/: AssemblyInfo.cs
examples/06Managed/: 06Managed.csproj  Program.cs
examples/06Managed/Properties/: AssemblyInfo.cs
examples/07M4AFile/: 07M4AFile.vcproj  07M4AFile.vcxproj  07M4AFile.vcxproj.filters  AudioResourceM4A.cpp  AudioResourceM4A.h  CMakeLists.txt  cAudioResourceM4A.cpp  cAudioResourceM4A.h  example.cpp
examples/Loop Utility/: example.cpp  tag.lib
examples/LoopUtility/: LoopUtility.vcxproj  LoopUtility.vcxproj.filters  example.cpp
examples/LoopUtility/taginclude/: README  aifffile.h  aiffproperties.h  apefooter.h  apeitem.h  apetag.h  asfattribute.h  asffile.h  asfproperties.h  asftag.h  attachedpictureframe.h  audioproperties.h  commentsframe.h  fileref.h  flacfile.h  flacproperties.h  generalencapsulatedobjectframe.h  id3v1genres.h  id3v1tag.h  id3v2extendedheader.h  id3v2footer.h  id3v2frame.h  id3v2framefactory.h  id3v2header.h  id3v2synchdata.h  id3v2tag.h  mp4atom.h  mp4coverart.h  mp4file.h  mp4item.h  mp4properties.h  mp4tag.h  mpcfile.h  mpcproperties.h  mpegfile.h  mpegheader.h  mpegproperties.h  oggfile.h  oggflacfile.h  oggpage.h  (+35 more)
examples/LoopUtility/taglib/: taglib.pro  taglib_export.h
examples/LoopUtility/taglib/ape/: apefile.h  apeproperties.h
examples/LoopUtility/taglib/asf/: asfpicture.h
examples/LoopUtility/taglib/mpeg/id3v2/frames/: unsynchronizedlyricsframe.h  urllinkframe.h
examples/LoopUtility/taglib/ogg/speex/: speexfile.h
examples/LoopUtility/taglib/riff/: rifffile.h
examples/LoopUtility/taglib/riff/aiff/: aifffile.h  aiffproperties.h
examples/LoopUtility/taglib/riff/wav/: wavfile.h  wavproperties.h
examples/LoopUtility/taglib/toolkit/: taglib.h  tlist.tcc  tmap.tcc  tstring.h
examples/LoopUtility/taglib/trueaudio/: trueaudiofile.h  trueaudioproperties.h
examples/LoopUtility/taglib/wavpack/: wavpackfile.h  wavpackproperties.h
include/: TinyOAL.h  TinyOAL_dlldef.h  cAudio.h  cAudioResource.h  cTinyOAL.h
include/bss-util/: LLBase.h  bss_alloc_block.h  bss_compiler.h  bss_sse.h  bss_util.h  cAVLtree.h  cArray.h
include/bss_util/: cAVLtree.h
include/tinyoal/: Audio.h  AudioResource.h  TinyOAL.h  TinyOAL_dlldef.h  cAudio.h  cAudioResource.h  cTinyOAL.h
media/: idea835.flac  license.txt  shape.flac  shapefail.flac
